--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,7 @@
 <!--Store this code in 'index.html' file inside the 'templates' folder-->
 <html lang="en">
 	<head>
-		<title>index</title>
+		<title>Admin</title>
 		<link rel="stylesheet" href="../static/style.css">
 	</head>
 
@@ -10,16 +10,16 @@
 			<div class="two">
 				<h1>Side Bar</h1>
 				<ul>
-					<li class="active"><a href="{{url_for('index')}}">Index</a></li>
+                    <li><a href="{{url_for('index')}}">Index</a></li>
 					<li><a href="{{url_for('display')}}">Display</a></li>
 					<li><a href="{{url_for('update')}}">Update</a></li>
 					<li><a href="{{url_for('logout')}}">Log out</a></li>
-					<li><a href="{{url_for('admin')}}">Admin</a></li>
+                    <li class="active"><a href="{{url_for('admin')}}">Admin</a></li>
 				</ul>
 			</div>
 			<div class="content" align="center">
 				<div class="topbar">
-					<h2>Welcome!! You are in Index Page!! </h2>					
+					<h2>Welcome!! You are in the Admin's page!! </h2>					
 				</div></br></br>
 				<div class="contentbar">
 					<div class="msg">{{ msg }}</div>
